samples/_failures_safe/1761632394_e3f050_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d63e3cf5.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_d63e3cf5.c:162:40: error: expected ‘;’ at end of input
  162 |             case TOKEN_NUMBER: type_str
      |                                        ^
      |                                        ;
./samples/SAFE/__tmp_d63e3cf5.c:162:13: error: expected declaration or statement at end of input
  162 |             case TOKEN_NUMBER: type_str
      |             ^~~~
./samples/SAFE/__tmp_d63e3cf5.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d63e3cf5.c:162:13: error: expected declaration or statement at end of input
